ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 80
...
